Update seat label
